# ScriptCut

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  ScriptCut.cpp  ScriptCut.h
